# MessagingApp

./: .gitignore  CMakeLists.txt  main.cpp
headers/: BCCH_app.h  messenger.h  pub_sub_helper.h  pubnub_interface.h  widget_manager.h
libs/c-core/core/: pubnub_create.c
libs/c-core/cpp/: posix.mk  pubnub_futres_windows.cpp
libs/c-core/posix/: pubnub_ntf_callback_posix.c
samples/: subscribe_publish_callback_sample.cpp
src/: BCCH_app.cpp  BCCH_main.cpp  formatting_helper.cpp  message_formatting_helper.cpp  message_formatting_helper.h  messenger.cpp  messenger.h  pub_sub_helper.cpp  pubnub_interface.cpp  test_main.cpp  widget_manager.cpp
